fix: remove bottom scrollbar

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -1,9 +1,12 @@
 html,
 body {
   height: 100%;
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
-  background-color: black;
   margin: 0;
   padding: 0;
+
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
+
+  background-color: black;
 }
